--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
       <form id="form">
         <label for="nome">Nome</label>
-        <input id="nome" name="nome" type="text" placeholder="Seu nome" required>
+        <input id="nome" name="nome" type="text" placeholder="Seu nome" id="nome" required>
 
         <label for="whatsapp">WhatsApp</label>
         <input id="whatsapp" name="whatsapp" type="tel" placeholder="(xx) xxxxx-xxxx" required>
